--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -82,7 +82,7 @@ ggplot(covid %>%
 	scale_y_continuous(label=comma,breaks=pretty_breaks())+
 	theme(legend.position = c(.2,.8))+
 	scale_x_date(breaks=pretty_breaks())+
-	labs(x="",color=element_blank())
+	labs(x="",y="",color=element_blank())
 ```
 
 
@@ -144,12 +144,12 @@ ggplot(tmp )+
 				axis.text.x = element_text(angle = 90, vjust = .5),
 				panel.spacing = unit(2, "lines"))+
 	facet_wrap(type~.,nrow=2,scales = 'free_y')+
-	labs(x="",y='count')
+	labs(x="",y='')
 ######################
 ```
 
 # Focus on MA
-```{r MA, fig.height=3,fig.width=3}
+```{r MA, fig.height=3,fig.width=4}
 # this is the data from JHU; see next line
 ma.jhu<-filter(US.by_state,state %in% c('Massachusetts','MA'),val>=1) %>%
 	mutate(val.log=log(val)) %>%
@@ -167,7 +167,8 @@ ma.orig<-tibble(date=seq(as.Date("2020-03-03") ,as.Date("2020-03-15"),by='1 day'
 
 ggplot(ma.orig%>% na.omit)+aes(date,delta)+
 	geom_bar(stat="identity")+
-	scale_y_continuous(breaks=pretty_breaks())+
+	scale_y_continuous(breaks=pretty_breaks(5))+
+	scale_x_date(breaks=pretty_breaks(10))+
 	labs(y="new cases in MA per day")
 ```
 
@@ -199,14 +200,14 @@ ggplot()+
 
 # Show plot and prediction 
 ggplot()+
-	geom_line(data=fit,aes(x=date,y=val,color='fit'),linetype=2)	+
-	geom_point(data=fit,aes(x=date,y=val,color='fit'))	+
+	geom_line(data=fit,aes(x=date,y=val,color='prediction'),linetype=2)	+
+	geom_point(data=fit,aes(x=date,y=val,color='prediction'))	+
 	geom_point(data=ma.orig,aes(date,val,color='actual'))+
 	scale_y_continuous(breaks=pretty_breaks(5),label=comma,
 										 sec.axis = dup_axis())+
 	scale_x_date(breaks=pretty_breaks())+
-	theme(legend.position = c(.2,.9))+
-	labs(y="confirmed cases in MA",x="")
+	theme(legend.position = c(.2,.8))+
+	labs(y="confirmed cases in MA",x="",color=element_blank())
 
 ```
 
